[tool.poetry]
name = "everstone"
version = "0.1.2"
description = "Simple Database Query Generator"
authors = ["scragly <29337040+scragly@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/scragly/everstone"

keywords = ["sql", "query", "generator", "simple"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.23.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
flake8-annotations = "^2.6.1"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.6.0"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.2.1"
flake8-todo = "^0.7"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
coverage = {extras = ["yaml"], version = "^5.5"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source_pkgs = ["everstone"]
source = ["tests"]

[tool.coverage.report]
fail_under = 100
exclude_lines = ["pragma: no cover", "if t.TYPE_CHECKING:"]
